@@ -1,6 +1,6 @@
 #!/bin/bash
 #
-#  Copyright 2006-2008 Jerome PASQUIER
+#  Copyright 2006-2009 Jerome PASQUIER
 # 
 #  This file is part of RainbruRPG.
 #
